Resolved issues with header and spacing

--- a/wp-content/themes/canberra/components/banner/_banner.scss
+++ b/wp-content/themes/canberra/components/banner/_banner.scss
@@ -1,4 +1,5 @@
 #banner {
+  margin-top: 0px;
   height: 100vh;
   display: flex;
   position: relative;
