--- a/wp-content/themes/canberra/src/scss/global/_header.scss
+++ b/wp-content/themes/canberra/src/scss/global/_header.scss
@@ -6,10 +6,11 @@
   display: flex;
   z-index: 1;
   background-color: $black;
-  @include mq(l, max) {
-    display: none;
+  #nav-desktop {
+    @include mq(s) {
+      display: none;
+    }
   }
-
   .left,
   .right {
     height: auto;
@@ -50,14 +51,11 @@
     }
   }
 }
-@include mq(l, max) {
-  display: none;
-}
 
 #nav-mobile-placeholder {
   display: none;
 
-  @include mq(l) {
+  @include mq(l, min) {
     display: block;
   }
 }
@@ -102,19 +100,21 @@
 }
 
 #nav-mobile-offcanvas {
-  position: fixed;
+  position: absolute;
   z-index: 2;
   top: 0;
   padding-top: 65px;
-  right: calc(120px - 100vw);
-  width: calc(100vw - 120px);
+  right: -50vw;
+  width: 50vw;
   height: 100vh;
   transition: right 0.3s ease-in-out;
   background: $black;
+  display: flex;
   &.open {
     right: 0;
   }
   .menu {
+    flex-direction: column;
     .menu-item {
       > a {
         font-weight: bold;
